Fix the overflow bug from the Unfixed Bugs section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,6 @@ nav li {
     flex: 1;
     border: 2px solid black;
     letter-spacing: 1px;
-
 }
 
 a:hover {
@@ -138,11 +137,6 @@ nav a {
 
 .basic-info {
     padding: 50px;
-    text-align: center;
-}
-
-.basic-info-outer {
-    padding: 10px;
 }
 
 .basic-info h2 {
@@ -397,7 +391,7 @@ footer a {
     }
 
     .basic-info {
-        padding: 10px;
+        padding: 20px;
     }
 
     .basic-info-outer {
@@ -579,7 +573,7 @@ footer a {
     }
 
     .basic-info {
-        padding: 10px;
+        padding: 20px;
     }
 
     .basic-info-outer {
@@ -711,6 +705,10 @@ footer a {
 
     header p {
         font-size: 1.8vw;
+    }
+
+    .basic-info {
+        padding: 30px;
     }
 
     .contact-info {
